:sparkles: kr ticker , tor -> container , redis containers
