# go/pkg/docs/swagger.json
@@ -18,6 +18,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "ticker"
+                ],
                 "summary": "ticker",
                 "responses": {}
             }
@@ -36,7 +39,52 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "dayCandle"
+                ],
                 "summary": "day candles",
+                "responses": {}
+            }
+        },
+        "/ticker/daycandle/kr": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "insert daycandles",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dayCandle"
+                ],
+                "summary": "day candles",
+                "responses": {}
+            }
+        },
+        "/ticker/kr": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "insert kr tickers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ticker"
+                ],
+                "summary": "krTicker",
                 "responses": {}
             }
         }
